# chat_expediente

./: .gitignore  AWS Bedrock Converse API.docx  Cargo.toml  README.md  global_context.json  sample_report.md
src/: chat.rs  claude.rs  cli.rs  document.rs  main.rs  web_server.rs
static/: index.html
uploads/: Carta timbrada - Alterna Academy.docx  Immutable By Design_ Andres Pineda (1).docx  message (1).txt  sample_data.json  sample_document.txt
