[package]
name = "chat_expediente"
version = "0.1.0"
edition = "2021"
default-run = "chat_expediente"

[[bin]]
name = "chat_expediente"
path = "src/main.rs"

[dependencies]
aws-config = "1.1.7"
aws-sdk-bedrock = "1.17.0"
aws-sdk-bedrockruntime = "1.17.0"
aws-types = "1.3.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"

# Web server dependencies
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"

# Document processing
dotext = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Environment variables
dotenv = "0.15"
